# -*- coding: utf-8 -*-
# ======================================================================================
# Copyright (c) 2019-2020 Christian Riedel
#
# This file 'setup.cfg' created 2020-01-28
# is part of the project/program 'DoTH-DNS'.
# This program is free software: you can redistribute it and/or modify
# it under the terms of the MIT License as published by
# the Massachusetts Institute of Technology.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# MIT License for more details.
#
# You should have received a copy of the MIT License
# along with this program. If not, see <https://opensource.org/licenses/MIT>.
#
# Github: https://github.com/Cielquan/
# ======================================================================================
[metadata]
name = DoTH-DNS
description = DoTH-DNS gives you great control over your DNS traffic
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = DNS, docker, pi-hole, unbound, doh, dot, traefik
maintainer = Christian Riedel
author = Christian Riedel
maintainer-email = cielquan@protonmail.com
url = https://github.com/Cielquan/DoTH-DNS
project_urls =
    Source=https://github.com/Cielquan/DoTH-DNS
    Documentation=https://doth-dns.readthedocs.io/
    Tracker=https://github.com/Cielquan/DoTH-DNS/issues
platforms = Linux
license = MIT
license_file = LICENSE.rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Topic :: Internet :: Name Service (DNS)
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring


[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = ~=3.6
install_requires =
    click >=7.0, <8
    tzlocal >=2, <3
    pip >==19
    setuptools >=45
setup_requires=
    setuptools_scm
    pip >==19
    setuptools >=45

[options.package_data]
"" = container_configs/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dothdns = dothdns.cli:dothdns
