[metadata]
name = python_test
description = python_test basic repo
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Cielquan/python_test
author = Christian Riedel
license = GPL-3.0
license_file = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
keywords = basic
maintainer = Christian Riedel
maintainer-email = cielquan@protonmail.com
project_urls =
    Source=https://github.com/Cielquan/python_test
    Documentation=https://python_test.readthedocs.io/
    Tracker=https://github.com/Cielquan/python_test/issues

[options]
packages = find:
install_requires =
    click>=7.0,<8
    tzlocal>=2,<3
python_requires = ~=3.6
include_package_data = True
package_dir =
    =src

[options.entry_points]
console_scripts =
    dothdns = dothdns.cli:dothdns

[options.extras_require]
docs =
    sphinx >= 2.0.0, < 3
    sphinx-rtd-theme >= 0.4
testing =
    flask
    pytest >= 4.0.0, <6
    pytest-cov >= 2.5.1, <3
    pytest-mock >= 1.10.0, <2
    pytest-xdist >= 1.22.2, <2

[options.package_data]
"" = container_configs/*

[options.packages.find]
where = src

[bdist_wheel]
universal = 0
